--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,12 @@ html {
 *:after {
   box-sizing: inherit;
 }
+.leaflet-container {
+  width: 100%;
+  height: 70vh;
+  z-index: -999;
+}
+
+.textoIcono {
+  margin-left: 10px;
+}
