--- a/src/components/stylesSwiper.css
+++ b/src/components/stylesSwiper.css
@@ -27,7 +27,11 @@
   display: block;
   margin-bottom: 1rem;
   max-height: 400px;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.mySwiper {
+  height: 400px;
 }
